workload pie chart

--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -14,8 +14,8 @@
       <li id="tab-translation-coverage" role="presentation">
           <a href="{% url 'custom-graph' %}">Translation Coverage</a>
       </li>
-      <li id="tab-workload-estimation" role="presentation" style="pointer-events:none;opacity:0.6;">
-          <a href="{% url 'workload' %}">Workload Estimation</a>
+      <li id="tab-translation-workload" role="presentation">
+          <a href="{% url 'workload' %}">Translation Workload</a>
       </li>
     </ul>
     {% block tabcontent %}{% endblock %}
