--- a/dashboard/templates/stats/_tabular_form.html
+++ b/dashboard/templates/stats/_tabular_form.html
@@ -2,7 +2,7 @@
     var a = "<span class='pull-right text-muted'>Stats are based on sync'd data. And %age is calculated on messages.</span>";
     $("#packagedesc").html("{{ pkg_desc }}"); $("#graphdisclaimer").html(a);
 </script>
-<table class="table table-bordered">
+<table class="table table-bordered table-hover">
     <thead>
       <tr>
         <th>&nbsp;</th>
