workload lang view

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -38,6 +38,12 @@
         border: 0;
         z-index: 9999;
       }
+      .modal-open {
+        position: fixed;
+        overflow: scroll;
+        width: 100%;
+        padding-right: 0!important;
+      }
     </style>
 
     <!-- jQuery and Bootstrap core JS -->
