workload combined and detailed view

--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -15,7 +15,7 @@
           <a href="{% url 'custom-graph' %}">Translation Coverage</a>
       </li>
       <li id="tab-translation-workload" role="presentation">
-          <a href="{% url 'workload' %}">Translation Workload</a>
+          <a href="{% url 'workload-combined' %}">Translation Workload</a>
       </li>
     </ul>
     {% block tabcontent %}{% endblock %}
