--- a/dashboard/templates/settings/package_config.html
+++ b/dashboard/templates/settings/package_config.html
@@ -20,8 +20,7 @@
     <div class="row">
         <div class="col-xs-12">
             <span>
-                <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
-                &nbsp;&nbsp;<span class="text-muted" style="font-size:large"><b>{{ package_name }}</b> | Configuration</span>
+                <span class="text-muted" style="font-size:large"><b>{{ package_name }}</b> | Configuration</span>
             </span>
             <span class="pull-right">
                 <span class="btn-group" role="group" aria-label="...">
