--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -27,7 +27,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Check Inventory</h3>
-                    <p style="font-size: medium;" class="text-justify">Graphs will be generated for enabled languages, aliases are used while syncing. One can create a language set, which can be associated with a release branch. Multiple instances of a translation platform can be added. RHEL and Fedora are release streams whereas RHEL 7.4 is a branch. A release branch should have a language set and a schedule. {{ app_name }} jobs sync at intervals for keeping stats and schedule latest.</p>
+                    <p style="font-size: medium;" class="text-justify">Graphs will be generated for enabled languages, aliases are used while syncing. One can create a language set, which can be associated with a release branch. Multiple instances of a translation platform can be added. RHEL and Fedora are release streams whereas RHEL 7.4 is a branch. A release branch should have a language set and a schedule. {{ app_name }} jobs sync at intervals to keep stats and schedule latest.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-1 col-sm-5">
                     <hr class="section-heading-spacer">
@@ -46,7 +46,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Add and Configure Packages</h3>
-                    <p style="font-size: medium;" class="text-justify">While adding a package, upstream URL is required. And package name is verified with selected translation platform. Translation of a package can be tracked for multiple release streams. Package can be sync'd while adding itself. Refreshing a package updates its details, translation stats and creates branch mapping. It maps {{ app_name }} release branches with most suitable project versions available at translation platform.</p>
+                    <p style="font-size: medium;" class="text-justify">While adding a package, upstream URL is required. And package name is verified with selected translation platform. Translation of a package can be tracked for multiple release streams. Package can be sync'd with translation platform while adding itself. Once sync'd, branch mapping can be created. It maps {{ app_name }} release branches with most suitable project versions available at translation platform. Package can be sync'd with upstream repo as well (limited to git repo and PO files).</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-5">
                     <hr class="section-heading-spacer">
@@ -64,7 +64,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Add Graph Rule</h3>
-                    <p style="font-size: medium;" class="text-justify">Slug form of rule name would be saved. This should be specific for a release branch. Packages having branch mapping created can only be included here. Either languages would be picked from associated language set with release branch or can be chosen. Somehow if a package is not tracked for a release stream and selected for inclusion {{ app_name }} would show an error.</p>
+                    <p style="font-size: medium;" class="text-justify">Slug form of rule name would be saved. This should be specific for a release branch. Packages having branch mapping created can only be included here. Languages could be picked from language set associated with the release branch or from enabled ones. Somehow if a package is not tracked for a release stream and selected for inclusion {{ app_name }} would show an error.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-1 col-sm-5">
                     <hr class="section-heading-spacer">
@@ -82,7 +82,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h3 class="section-heading">Experience</h3>
-                    <p style="font-size: medium;" class="text-justify">{{ app_name }} has two graph views: specific to a package in all languages for all branches and another specific to a release branch in chosen languages for selected packages. Latter is a graph rule representation and its accuracy depends on branch mapping of packages. A sync'd package can appear in former view whereas branch mapping is necessary for latter.</p>
+                    <p style="font-size: medium;" class="text-justify">{{ app_name }} has two graph views: specific to a package in all languages for all branches and another specific to a release branch in chosen languages for selected packages. Latter is a graph rule representation and its accuracy depends on branch mapping of packages. A sync'd package can appear in former view whereas branch mapping is necessary for latter. Even translation workload could be estimated for a release branch. This has three views: combined, detailed and per languages.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-5">
                     <hr class="section-heading-spacer">
