--- a/dashboard/templates/settings/_branch_mapping.html
+++ b/dashboard/templates/settings/_branch_mapping.html
@@ -2,33 +2,28 @@
     <div class="panel panel-default">
       <div class="panel-heading" style="padding-bottom:20px">
         <span style="font-size:large">Branch Mapping</span>
-        <span class="pull-right"><a class="btn btn-default btn-small disabled">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+        <span class="pull-right">
+            {% if mapping_lastupdated %}
+                <span class="text-muted">Last Updated:</span> {{ mapping_lastupdated|timesince }} <span style="color:grey">ago</span>.
+            {% endif %}
         </span>
       </div>
-      <div class="panel-body">
-          <table class="table table-hover table-bordered" cellspacing="0">
-            <thead>
-                <tr>
-                    <th>Release Stream Branch</th>
-                    <th>Translation Platform Project Version</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for branch, version in branch_mapping.items %}
-                <tr>
-                    <td>{{ branch }}</td>
-                    <td>{{ version }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-          </table>
-      </div>
-      {% if mapping_lastupdated %}
-      <div class="panel-footer">
-          <span class="text-muted">Last Updated:</span> {{ mapping_lastupdated|timesince }} <span style="color:grey">ago</span>.
-      </div>
-      {% endif %}
+      <table class="table table-hover table-bordered" cellspacing="0">
+        <thead>
+            <tr>
+                <th>Release Stream Branch</th>
+                <th>Translation Platform Project Version</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for branch, version in branch_mapping.items %}
+            <tr>
+                <td>{{ branch }}</td>
+                <td>{{ version }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+      </table>
     </div>
 {% else %}
     No mapping found. <span class="text-muted">Please check release branch(es) and refresh the package.</span>
