--- a/dashboard/templates/settings/release_streams.html
+++ b/dashboard/templates/settings/release_streams.html
@@ -24,7 +24,7 @@
             {% if user.is_authenticated and user.is_superuser %}
                 <a href="{% url 'admin:dashboard_releasestream_add' %}" role="button" class="btn btn-default">Add Release Stream</a>
             {% else %}
-                <a href="{% url 'admin:index' %}" role="button" class="btn btn-default">Manage Release Streams</a>
+                <a href="{% url 'admin:dashboard_releasestream_changelist' %}" role="button" class="btn btn-default">Manage Release Streams</a>
             {% endif %}
         </span>
     </div>
