--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -108,7 +108,7 @@
         <h4>Which translation platforms are currently supported? Are there some plans to support more?</h4>
         <span class="text-muted">{{ app_name }} supports <a href="http://zanata.org" target="_blank">Zanata</a>. For GNOME packges, integration with Damned Lies is planned.</span>
         <h4>Translation progress can be tracked for RHEL and Fedora, as of now. How about others?</h4>
-        <span class="text-muted">Plans are! May be in coming releases {{ app_name }} start tracking for others also like JBoss, Ansible Tower, etc.</span>
+        <span class="text-muted">Plans are! May be in coming releases {{ app_name }} start tracking for others also like JBoss, Ansible, etc.</span>
     </div>
 </div>
 {% endblock %}
