--- a/dashboard/templates/settings/jobs.html
+++ b/dashboard/templates/settings/jobs.html
@@ -52,7 +52,7 @@ $(document).ready(function(){$('#tab-jobs').addClass('active');$("#syncTransForm
         <input type="hidden" value="synctransplatform" id="syncTransIdentifier"/>
         <button type="submit" data-loading-text="Syncing..." class="btn btn-default">Run Now</button>
         <span id="syncTransMsg">&nbsp;&nbsp;This would initiate a sync job to update:
-            <span class="text-info"> project details and stats of registered packages.</span></span>
+            <span class="text-info"> project details of registered packages.</span></span>
     </form>
   </div>
 </div>
