--- a/dashboard/templates/settings/jobs.html
+++ b/dashboard/templates/settings/jobs.html
@@ -18,10 +18,10 @@ $(document).ready(function(){$('#tab-jobs').addClass('active');$("#syncTransForm
 <div class="row">
     <div class="col-xs-12">
         <span>
-            <span class="badge">2</span> task configured.
+            <span class="badge">2</span> jobs
         </span>
         <span class="pull-right">
-            <button type="button" class="btn btn-default disabled">Add Job</button>
+            <!--<button type="button" class="btn btn-default disabled">Add Job</button>-->
         </span>
     </div>
 </div>
