--- a/dashboard/templates/settings/logs.html
+++ b/dashboard/templates/settings/logs.html
@@ -18,7 +18,7 @@
 <div class="row">
     <div class="col-xs-12">
         <span>
-            <span class="badge">{{ logs|length }}</span> jobs ran.
+            <span class="badge">{{ logs|length }}</span> logs
         </span>
         <span class="pull-right">
             <!--<button type="button" class="btn btn-default disabled">Archive Logs</button>-->
