--- a/dashboard/templates/settings/package_config.html
+++ b/dashboard/templates/settings/package_config.html
@@ -40,7 +40,7 @@
                       </a>
                   {% endif %}
                 </span>
-                <a type="button" class="btn btn-default" href="{% url 'settings-packages' %}">Back to List Packages</a>
+                <a type="button" class="btn btn-default" href="{% url 'settings-packages' %}">Back to Packages</a>
             </span>
         </div>
     </div>
