--- a/dashboard/templates/settings/graph_rules.html
+++ b/dashboard/templates/settings/graph_rules.html
@@ -22,10 +22,12 @@
 <div class="row">
     <div class="col-xs-12">
         <span>
-            <span class="badge">{{ rules|length }}</span> graph rules created.
+            <span class="badge">{{ rules|length }}</span> graph rules
         </span>
         <div class="pull-right">
-            <a class="btn btn-default" role="button" href="{% url 'settings-graph-rules-new' %}">Add Graph Rule</a>
+            {% if user.is_authenticated %}
+                <a class="btn btn-default" role="button" href="{% url 'settings-graph-rules-new' %}">Add Graph Rule</a>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -39,7 +41,7 @@
                 <th>Locales</th>
                 <th>Release Branch</th>
                 <th>Created On</th>
-                <th>&nbsp;</th>
+                <!--<th>&nbsp;</th>-->
             </tr>
         </thead>
         <tfoot>
@@ -49,7 +51,7 @@
                 <th>Locales</th>
                 <th>Release Branch</th>
                 <th>Created On</th>
-                <th>&nbsp;</th>
+                <!--<th>&nbsp;</th>-->
             </tr>
         </tfoot>
         <tbody>
@@ -60,9 +62,9 @@
                 <td>{{ rule.rule_langs|join:", " }}</td>
                 <td>{{ rule.rule_relbranch }}</td>
                 <td>{{ rule.created_on }} <span class="glyphicon glyphicon-time" aria-hidden="true"></span></td>
-                <td align="center">
-                  <a class="btn btn-default btn-small disabled"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                </td>
+                <!--<td align="center">-->
+                  <!--<a class="btn btn-default btn-small disabled"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>-->
+                <!--</td>-->
             </tr>
             {% endfor %}
         </tbody>
