--- a/dashboard/templates/settings/settings_base.html
+++ b/dashboard/templates/settings/settings_base.html
@@ -23,11 +23,11 @@
       <li id="tab-summary" role="presentation"><a href="{% url 'settings' %}">Summary</a></li>
       <li id="tab-languages" role="presentation"><a href="{% url 'settings-languages' %}">Languages</a></li>
       <li id="tab-trans-platforms" role="presentation"><a href="{% url 'settings-trans-platforms' %}">Translation Platforms</a></li>
-      <li id="tab-release-streams" role="presentation"><a href="{% url 'settings-release-streams' %}">Release Streams</a></li>
+      <li id="tab-release-streams" role="presentation"><a href="{% url 'settings-release-streams' %}">Products</a></li>
       <li id="tab-packages" role="presentation"><a href="{% url 'settings-packages' %}">Packages</a></li>
       <li id="tab-graph-rules" role="presentation"><a href="{% url 'settings-graph-rules' %}">Graph Rules</a></li>
       <!--<li id="tab-notification" role="presentation"><a href="{% url 'settings-notification' %}">Notification</a></li>-->
-      {% if user.is_authenticated and user.is_staff %}
+      {% if user.is_authenticated %}
         <li id="tab-jobs" role="presentation"><a href="{% url 'settings-jobs' %}">Jobs</a></li>
       {% endif %}
         <li id="tab-logs" role="presentation"><a href="{% url 'settings-logs' %}">Logs</a></li>
