--- a/dashboard/templates/settings/transplatforms.html
+++ b/dashboard/templates/settings/transplatforms.html
@@ -28,10 +28,9 @@
             {% endif %}
         </span>
         <span class="pull-right">
-            {% if user.is_authenticated and user.is_superuser %}
+            {% if user.is_authenticated and user.is_staff %}
                 <a href="{% url 'admin:dashboard_transplatform_add' %}" role="button" class="btn btn-default">Add Server Instance</a>
-            {% else %}
-                <a href="{% url 'admin:dashboard_transplatform_changelist' %}" role="button" class="btn btn-default">Manage Translation Platforms</a>
+                <a href="{% url 'admin:dashboard_transplatform_changelist' %}" role="button" class="btn btn-default">Manage Platforms</a>
             {% endif %}
         </span>
     </div>
@@ -59,7 +58,7 @@
                 <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
             </p>
             {% endif %}
-            {% if user.is_authenticated and user.is_superuser %}
+            {% if user.is_authenticated and user.is_staff %}
             <p>
                 <a href="{% url 'admin:dashboard_transplatform_change' forloop.counter %}" class="btn btn-default btn-small" role="button">Edit</a>
                 {% if platform.server_status %}
